--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@
 agp = "8.11.0"
 firebaseBom = "33.16.0"
 kotlin = "2.2.0"
+
 ksp = "2.2.0-2.0.2"
 coreKtx = "1.16.0"
 googleServices = "4.4.3"
@@ -24,10 +25,12 @@ hilt = "2.56.2"
 # worker manager
 hilt-work = "1.2.0"
 workmanager = "2.10.2"
+startup-runtime = "1.1.1"
+
 
 # Networking & Serialization
 retrofit = "3.0.0"
-okhttp = "4.12.0"
+okhttp = "5.1.0"
 moshi = "1.15.2"
 
 # Preferences DataStore
@@ -68,6 +71,7 @@ material = "1.12.0"
 datastorePreferencesCoreAndroid = "1.1.7"
 constraintlayout = "2.2.1"
 pagingCommonAndroid = "3.3.6"
+pagingComposeAndroid = "3.4.0-alpha01"
 
 [libraries]
 # Core
@@ -87,7 +91,9 @@ androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-man
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icons" }
-androidx-paging-common-android = { group = "androidx.paging", name = "paging-common-android", version.ref = "pagingCommonAndroid" }
+androidx-paging-common-android = { group = "androidx.paging", name = "paging-common", version.ref = "pagingCommonAndroid" }
+androidx-paging-compose = { group = "androidx.paging", name = "paging-compose", version.ref = "pagingComposeAndroid" }
+
 
 
 # fragments
@@ -118,6 +124,7 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 room-paging = { module = "androidx.room:room-paging", version.ref = "room" }
 
+
 # Image Loading
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coil" }
 
@@ -146,8 +153,11 @@ firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 
 # work manager
 hilt-work = { module = "androidx.hilt:hilt-work", version.ref = "hilt-work" }
-hilt-work-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hilt-work" }
+hilt-work-compiler = { group = "androidx.hilt", name = "hilt-compiler", version.ref = "hilt-work" }
+work-runtime = { group = "androidx.work", name = "work-runtime", version.ref = "workmanager" }
 work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "workmanager" }
+androidx-startup-runtime = { group = "androidx.startup", name = "startup-runtime", version.ref = "startup-runtime" }
+
 
 # Test
 junit = { group = "junit", name = "junit", version.ref = "junit" }
